feat: - add partial authentication function

--- a/conifg/apiserver.yaml
+++ b/conifg/apiserver.yaml
@@ -1,9 +1,13 @@
-student:
-  name: lihao
-  age: 23
 redis:
   host: "127.0.0.1"
   port: 6016
   username: kk
   password: 1234
-name: tt
+insecure:
+  bind-address: 0.0.0.0
+  bind-port: 8080
+jwt:
+  realm: JWT # jwt 标识
+  key: dfVpOK8LZeJLZHYmHdb1VdyRrACKpqoo # 服务端密钥
+  timeout: 240h # token 过期时间(小时)
+  max-refresh: 240h # token 更新时间(小时)
